[gd_scene load_steps=6 format=3 uid="uid://dr84fp5s6bymk"]

[ext_resource type="Script" path="res://scenes/maps/fin_dialogue.gd" id="1_7oohw"]
[ext_resource type="Texture2D" uid="uid://cuhbywg8ndecf" path="res://assets/Complete_GUI_Essential_Pack_Free_Version/01_Basic_Collection/01_Flat_Theme/Sprites/UI_Flat_Fillbar_01_Hollow.png" id="2_r0x3c"]

[sub_resource type="SystemFont" id="SystemFont_cssfp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6nwyq"]
atlas = ExtResource("2_r0x3c")
region = Rect2(0, 10, 32, 12)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_eckjb"]

[node name="CanvasLayer" type="CanvasLayer"]

[node name="fin_dialogue" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0
size_flags_vertical = 4
script = ExtResource("1_7oohw")

[node name="ColorRect" type="ColorRect" parent="fin_dialogue"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.00392157, 0.0117647, 0, 1)

[node name="summary" type="RichTextLabel" parent="fin_dialogue/ColorRect"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 92.0
offset_top = -142.0
offset_right = 716.0
offset_bottom = 128.0
grow_vertical = 2
theme_override_fonts/normal_font = SubResource("SystemFont_cssfp")
theme_override_font_sizes/normal_font_size = 30
bbcode_enabled = true
text = "Vous venez de terminer cette visite chez le médecin. 
Cependant votre état de santé n'est pas encore optimal.
Quelques temps plus tard vous décidez donc d'y retourner"
visible_characters = 0
visible_ratio = 0.0

[node name="continue" type="RichTextLabel" parent="fin_dialogue/ColorRect"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -153.0
offset_top = -74.0
offset_right = 153.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 30
text = "( space to continue )"

[node name="Label" type="Label" parent="fin_dialogue/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.764
anchor_right = 0.764
offset_left = -159.128
offset_top = 75.0
offset_right = 159.872
offset_bottom = 187.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 40
text = "Vos Statistiques "

[node name="VBoxContainer" type="VBoxContainer" parent="fin_dialogue/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.831
anchor_top = 0.241
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 34.688
offset_top = -0.168015
offset_right = 256.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
rotation = 1.5708

[node name="HSeparator2" type="HSeparator" parent="fin_dialogue/ColorRect/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="fin_dialogue/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="texture_serenity" type="TextureRect" parent="fin_dialogue/ColorRect/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
self_modulate = Color(0.635294, 0.843137, 0.627451, 1)
texture_filter = 1
layout_mode = 2
texture = SubResource("AtlasTexture_6nwyq")
expand_mode = 2

[node name="serenity_bar" type="ProgressBar" parent="fin_dialogue/ColorRect/VBoxContainer/PanelContainer/texture_serenity"]
unique_name_in_owner = true
self_modulate = Color(0, 1, 1, 1)
layout_direction = 2
layout_mode = 2
anchor_left = 0.111357
anchor_top = 0.373001
anchor_right = 0.896572
anchor_bottom = 0.627002
offset_left = -0.270821
offset_top = 0.0499954
offset_right = 0.125
offset_bottom = -0.049942
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
theme_override_styles/background = SubResource("StyleBoxEmpty_eckjb")
value = 50.0
fill_mode = 1
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="HSeparator" type="HSeparator" parent="fin_dialogue/ColorRect/VBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2

[node name="PanelContainer2" type="PanelContainer" parent="fin_dialogue/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="texture_health" type="TextureRect" parent="fin_dialogue/ColorRect/VBoxContainer/PanelContainer2"]
unique_name_in_owner = true
modulate = Color(0.635294, 0.843137, 0.627451, 1)
texture_filter = 1
layout_mode = 2
texture = SubResource("AtlasTexture_6nwyq")
expand_mode = 2

[node name="health_bar" type="ProgressBar" parent="fin_dialogue/ColorRect/VBoxContainer/PanelContainer2/texture_health"]
unique_name_in_owner = true
self_modulate = Color(0, 1, 0, 1)
layout_direction = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0992248
anchor_top = 0.360001
anchor_right = 0.900775
anchor_bottom = 0.640002
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 8
theme_override_styles/background = SubResource("StyleBoxEmpty_eckjb")
value = 50.0
fill_mode = 1
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Timer" type="Timer" parent="fin_dialogue"]

[node name="affiche_text" type="Timer" parent="fin_dialogue"]
wait_time = 0.025
one_shot = true
autostart = true

[connection signal="timeout" from="fin_dialogue/Timer" to="fin_dialogue" method="_on_timer_timeout"]
[connection signal="timeout" from="fin_dialogue/affiche_text" to="fin_dialogue" method="_on_affiche_text_timeout"]
